<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.tagtalk.tagtalktest.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/my_profile"
        android:orderInCategory="101"
        android:title="@string/wine_info_menu_my_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/help_desk"
        android:orderInCategory="102"
        android:title="@string/wine_info_menu_help_desk"
        app:showAsAction="never"/>
    <item
        android:id="@+id/log_out"
        android:orderInCategory="103"
        android:title="@string/wine_info_menu_log_out"
        app:showAsAction="never"/>
</menu>