<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/redeem_submit_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.tagtalk.winemate.RedeemSubmitActivity"
    tools:showIn="@layout/activity_redeem_submit">

    <RelativeLayout
        android:id="@+id/content_redeem_submit_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/redeem_submit_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/redeem_submit_activity_hint"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/redeem_submit_fullname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/redeem_submit_hint"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edit_text_shadow_round"
            android:hint="@string/redeem_submit_activity_fullname_hint"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_gray"
            android:textSize="@dimen/small_text_size" />

        <EditText
            android:id="@+id/redeem_submit_street"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/redeem_submit_fullname"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edit_text_shadow_round"
            android:hint="@string/redeem_submit_activity_street_hint"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_gray"
            android:textSize="@dimen/small_text_size" />


        <EditText
            android:id="@+id/redeem_submit_city"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/redeem_submit_street"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edit_text_shadow_round"
            android:hint="@string/redeem_submit_activity_city_hint"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_gray"
            android:textSize="@dimen/small_text_size" />

        <EditText
            android:id="@+id/redeem_submit_province"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/redeem_submit_city"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edit_text_shadow_round"
            android:hint="@string/redeem_submit_activity_province_hint"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_gray"
            android:textSize="@dimen/small_text_size" />

        <EditText
            android:id="@+id/redeem_submit_country"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/redeem_submit_province"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edit_text_shadow_round"
            android:hint="@string/redeem_submit_activity_country_hint"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_gray"
            android:textSize="@dimen/small_text_size" />

        <EditText
            android:id="@+id/redeem_submit_zipcode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/redeem_submit_country"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edit_text_shadow_round"
            android:hint="@string/redeem_submit_activity_zipcode_hint"
            android:inputType="number"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_gray"
            android:textSize="@dimen/small_text_size" />

        <EditText
            android:id="@+id/redeem_submit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/redeem_submit_zipcode"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edit_text_shadow_round"
            android:hint="@string/redeem_submit_activity_phone_number_hint"
            android:inputType="phone"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_gray"
            android:textSize="@dimen/small_text_size" />

        <EditText
            android:id="@+id/redeem_submit_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/redeem_submit_phone_number"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edit_text_shadow_round"
            android:hint="@string/redeem_submit_activity_email_hint"
            android:inputType="textEmailAddress"
            android:paddingEnd="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="0dp"
            android:paddingStart="10dp"
            android:textColorHint="@color/text_gray"
            android:textSize="@dimen/small_text_size" />

        <Button
            android:id="@+id/redeem_submit_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/redeem_submit_email"
            android:background="@android:color/transparent"
            android:text="@string/redeem_submit_activity_submit_button"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/small_text_size" />


    </RelativeLayout>
</ScrollView>