<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.tagtalk.winemate.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rectangle_background"
        android:hint="@string/signup_activity_username_hint"
        android:inputType="text"
        android:textColorHint="#EEEEEE"/>

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/signup_username"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_background"
        android:hint="@string/signup_activity_email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="#EEEEEE"/>

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/signup_email"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_background"
        android:fontFamily="sans-serif"
        android:hint="@string/signup_activity_password_hint"
        android:inputType="textPassword"
        android:textColorHint="#EEEEEE"/>

    <EditText
        android:id="@+id/signup_password_reenter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/signup_password"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_background"
        android:fontFamily="sans-serif"
        android:hint="@string/signup_activity_password_reenter_hint"
        android:inputType="textPassword"
        android:textColorHint="#EEEEEE"/>

    <Button
        android:id="@+id/signup_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/signup_password_reenter"
        android:layout_alignStart="@id/signup_password_reenter"
        android:layout_below="@+id/signup_password_reenter"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:text="@string/signup_activity_signup_button_text"
        android:textAllCaps="false"/>

    <ToggleButton
        android:id="@+id/signup_show_hide_password_switch"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/signup_password_reenter"
        android:layout_alignRight="@+id/signup_password_reenter"
        android:layout_alignTop="@+id/signup_signup_button"
        android:background="@drawable/password_toggle_button_selector"
        android:checked="true"
        android:text=""
        android:textOff=""
        android:textOn=""/>

</RelativeLayout>
