<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.tagtalk.winemate.WelcomePageMoreFeaturesFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/welcome_page_more_features_title"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/text_dark"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo_new" />

        <Button
            android:id="@+id/welcome_activity_sign_up"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:background="@color/text_dark"
            android:text="@string/welcome_page_sign_up"
            android:textColor="@color/text_white"
            android:textSize="16dp">
        </Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_page_has_account"
                android:textAlignment="center"
                android:textColor="@color/text_dark"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/welcome_activity_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_page_login"
                android:clickable="true"
                android:paddingLeft="8dp"
                android:paddingRight="2dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/text_dark"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>