<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.tagtalk.winemate.ResetPasswordActivity"
    tools:showIn="@layout/activity_reset_password">


    <TextView
        android:id="@+id/reset_password_introduction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset_password_activity_intro"
        android:textSize="@dimen/highlight_text_size" />


    <EditText
        android:id="@+id/reset_password_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/reset_password_introduction"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_background"
        android:hint="@string/reset_password_activity_email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="#EEEEEE" />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/reset_password_email"
        android:layout_alignRight="@+id/reset_password_email"
        android:layout_below="@+id/reset_password_email"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/reset_password_activity_submit_button_text"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>
